--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "dependencies": {
     "args-js": "^0.10.6",
     "async": "^0.9.0",
+    "coffee-script": "^1.9.2",
     "commander": "^2.6.0",
     "deasync": "^0.0.10",
     "glob": "^4.4.1",
+    "nesh": "^1.5.1",
     "pg": "^4.3.0",
     "underscore": "^1.8.2"
   },
